[gd_scene load_steps=5 format=3 uid="uid://kygvoa4m8lte"]

[ext_resource type="Script" uid="uid://cyduyo76hmat6" path="res://scripts/ui/shipyard_page.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab_panel"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab_unsel"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tab_sel"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_top = 2
border_color = Color(0, 0.8, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
expand_margin_bottom = 2.0

[node name="ShipyardPage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Shipyard & Engineering"

[node name="StatsPanel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/StatsPanel"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="HPLabel" type="Label" parent="VBoxContainer/StatsPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.4, 1)
text = "Structure: 0 / 0"

[node name="AtkLabel" type="Label" parent="VBoxContainer/StatsPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.2, 1)
text = "Firepower: 0"

[node name="DefLabel" type="Label" parent="VBoxContainer/StatsPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.8, 1, 1)
text = "Shield: 0"

[node name="EvaLabel" type="Label" parent="VBoxContainer/StatsPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.2, 1)
text = "Evasion: 0%"

[node name="EnergyLabel" type="Label" parent="VBoxContainer/StatsPanel/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.2, 1)
text = "Energy: 0/0"

[node name="FocalHull" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="Silhouette" type="TextureRect" parent="VBoxContainer/FocalHull"]
modulate = Color(0, 1, 1, 0.2)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="Info" type="Label" parent="VBoxContainer/FocalHull"]
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_color = Color(0, 0.8, 1, 0.5)
theme_override_font_sizes/font_size = 12
text = " [ READY FOR DEPLOYMENT ]"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="RackContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
